--- a/GameData/AxialAerospace/SimpleCargoSolutions/Parts/scs-Docking.cfg
+++ b/GameData/AxialAerospace/SimpleCargoSolutions/Parts/scs-Docking.cfg
@@ -56,7 +56,7 @@ PART
 	tags = #autoLOC_500908 // berth capture connect couple dock fasten join moor port socket utility
 
 	mass = 0.02
-	fuelCrossFeed = FALSE
+	// fuelCrossFeed = FALSE
 	explosionPotential = 0.5
 
 	dragModelType = default
