--- a/GameData/AxialAerospace/SimpleCargoSolutions/Parts/scs-Docking.cfg
+++ b/GameData/AxialAerospace/SimpleCargoSolutions/Parts/scs-Docking.cfg
@@ -1,14 +1,13 @@
-// scs-Docking.cfg v1.0.0.0
+// scs-Docking.cfg v1.0.1.0
 // Simple Cargo Solutions (CARGO)
 // created: 24 Nov 2015
-// updated: 24 Oct 2022
+// updated: 31 Jan 2023
 
 // this file: GPL-2.0 by zer0Kerbal
 
 PART
 {
 	name = scs-Docking
-	// cbDocking
 	module = Part
 	author = Art and zer0Kerbal
 
@@ -21,6 +20,7 @@ PART
 	rescaleFactor = 2
 	bulkheadProfiles = size0, srf
 
+	attachRules = 1,1,1,1,0
 	NODE
 	{
 		name = top
@@ -39,10 +39,9 @@ PART
 	node_stack_top = 0.0, 0.07623, 0.0, 0.0, 1.0, 0.0, 1, 1
 	node_stack_bottom = 0.0, -0.30411, 0.0, 0.0, 0.0, -1.0, 0, 1
 	node_attach = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0, 1
-	attachRules = 1,1,1,1,0
 
-	fx_gasBurst_white = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, decouple
 	sound_decoupler_fire = decouple
+	fx_gasBurst_white = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, decouple
 
 	TechRequired = composites
 	entryCost = 8400
@@ -56,17 +55,17 @@ PART
 	tags = #autoLOC_500908 // berth capture connect couple dock fasten join moor port socket utility
 
 	mass = 0.02
-	// fuelCrossFeed = FALSE
+	// fuelCrossFeed = False
 	explosionPotential = 0.5
 
 	dragModelType = default
 	maximum_drag = 0.25
-	minimum_drag = 0.25
+	minimum_drag = 0.35
 	angularDrag = 0.5
 
 	crashTolerance = 10
-	breakingForce = 50
-	breakingTorque = 50
+	breakingForce = 150
+	breakingTorque = 150
 
 	maxTemp = 2000
 
@@ -77,12 +76,12 @@ PART
 	MODULE
 	{
 		name = ModuleToggleCrossfeed
-		crossfeedStatus = true
-		toggleEditor = true
-		toggleFlight = true
+		crossfeedStatus = True
+		toggleEditor = True
+		toggleFlight = True
 		techRequired = fuelSystems
-		eventPropagatesInEditor = true
-		eventPropagatesInFlight = false
+		eventPropagatesInEditor = True
+		eventPropagatesInFlight = False
 		toggleText = #autoLOC_236032  // Toggle Crossfeed
 		enableText = #autoLOC_236028  // Enable Crossfeed
 		disableText = #autoLOC_236030 // Disable Crossfeed
@@ -95,5 +94,10 @@ PART
 		referenceAttachNode = dockingNode
 		nodeTransformName = dockingNode
 		controlTransformName = controlNode
+
+		menuName = #AAL-DOCK-name
+		stagingEnableText = #AAL-DOCK-enbl
+		stagingDisableText = #AAL-DOCK-dsbl
 	}
+
 }
